--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,7 @@ python-socketio[server]==5.9.0
 SQLAlchemy>=1.4
 psycopg2-binary>=2.9
 alembic>=1.8
-passlib[bcrypt]>=1.7
+bcrypt>=4.0
 pyjwt>=2.6
 python-multipart>=0.0.5
 aiofiles>=23.1
